Fixed highlighting bug and target spacing bug

--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,7 @@ table {
 .target {
     text-align: center;
     font-size: 4em;
+    letter-spacing: .3em;
 }
 
 .score {
